added Deaf Republic to recs

--- a/_data/recs.yaml
+++ b/_data/recs.yaml
@@ -43,3 +43,4 @@ list:
   - title: Someone Comes to Town, Someone Leaves Town
     desc: If you were ranking Cory Doctorow books, this would probably end up closer to the bottom than the top. Not a masterpiece by any means but I found it strangely compelling. The only fiction I've read of his where I'd believe that the characters came before the ideas, or where the characters feel like anything other than vehicles for ideas.
   - title: "Computer Systems: A Programmer's Perspective"
+  - title: Deaf Republic
